--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,10 @@
 {{ define "main" }}
-    <article class="center cf pv5 measure-wide-l">
-      <h1>
-        This is not the page you were looking for
-      </h1>
-      <p>Apologies. Maybe try the <a href="/archives/">archives</a>?</p>
+	<article class="mb5">
+		<h3 class="mb0 lh-title roboto">
+        	This is not the page you were looking for
+      	</h3>
+      	<div class="measure-wide nested-copy-line-height nested-links nested-blockquote nested-img lh-copy serif">
+	      	<p>Apologies. Maybe try the <a href="/archives/">archives</a>?</p>
+	    </div>
     </article>
 {{ end }}
