add non-breaking space to name
name was breaking on two lines on smaller breakpoints and this should
help with that

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -31,7 +31,7 @@
 			<div class="w-100 db cf">
 				<section class="w-20-l mb3-s measure pr4 fl-l">
 					<div class="mb2">
-						<p class="lh-title mt2 pt1 mb4 pb1">By <span class="ttu">Shawn Medero</span></p>
+						<p class="lh-title mt2 pt1 mb4 pb1">By <span class="ttu">Shawn&nbsp;Medero</span></p>
 					</div>
 					{{ block "navigation" . }}
 						{{ partial "site-navigation.html" . }}
