implement measure-wide universally, minor content change

--- a/layouts/links/li.html
+++ b/layouts/links/li.html
@@ -1,9 +1,9 @@
-	<article class="mb5">
+	<article class="mb5 measure-wide">
 		<h3 class="f6 mb0 lh-title roboto">
 			<a href="{{ .Params.Link }}" class="link underline black hover-dark-blue underline-hover">{{ .Title|title }}</a>&nbsp;
 			<a href="{{ .Permalink }}" class="link" rel="bookmark"><i class="silver fa fa-bolt" aria-hidden="true"></i></a>
 		</h3>
-		<div class="measure-wide nested-copy-line-height nested-links nested-blockquote nested-img lh-copy serif">
+		<div class="nested-copy-line-height nested-links nested-blockquote nested-img lh-copy serif">
 			{{ .Content }}
 		</div>		
 	</article>
