--- a/layouts/links/single.html
+++ b/layouts/links/single.html
@@ -2,12 +2,12 @@
   {{ .Title }} – Links – {{ .Site.Title }}
 {{ end }}
 {{ define "main" }}
-	<article class="mb5">
+	<article class="mb5 measure-wide">
 		<h3 class="f6 mb0 lh-title roboto">
 			<a href="{{ .Params.Link }}" class="link underline black hover-dark-blue underline-hover">{{ .Title|title }}</a>&nbsp;
 			<a href="{{ .Permalink }}" class="link" rel="bookmark"><i class="silver fa fa-bolt" aria-hidden="true"></i></a>
 		</h3>
-		<div class="measure-wide nested-copy-line-height nested-links nested-blockquote nested-img lh-copy serif">
+		<div class="nested-copy-line-height nested-links nested-blockquote nested-img lh-copy serif">
 			{{ .Content }}
 		</div>
 		<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}" class="mt0 f6 gray serif">Published on {{ .Date.Format "January 2, 2006" }}</time>
