Minor index redesign
- add pagination
- remove date restriction on how many post to show

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,24 @@
 {{ define "main" }}
 
-{{ range .Data.Pages.GroupByDate "Monday, 2 January 2006" }}
-	{{ $page := index .Pages 0 }}{{/* Each group has at least 1 page */}}
-	{{ if ge $page.Date.Unix (now.AddDate 0 0 -7) }}
+
+	{{ $paginator := .Paginate (where .Data.Pages "Section" "in" (slice "posts" "links" "minis")) }}
+
+	{{ range $paginator.Pages.GroupByDate "Monday, 2 January 2006" }}
+		{{ $page := index .Pages 0 }}{{/* Each group has at least 1 page */}}
+
     <h2 class="f5 ttu lh-title">{{ .Key }}</h2>
+    <ul class="ma0 pa0 list">
 	{{ range .Pages }}
 		{{ .Render "li" }}
 	{{ end }}
-  {{ end }}
+	</ul>
+	
+	{{ end }}
+
 {{ end }}
+
+{{ define "pagination" }}
+
+	{{ partial "pagination.html" . }}
 
 {{ end }}
